version/0.6/_sources/examples/05-Q3D/Q3D_Example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\05-Q3D\Q3D_Example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_05-Q3D_Q3D_Example.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_05-Q3D_Q3D_Example.py:


Q3D Extractor: busbar analysis
------------------------------
This example shows how you can use PyAEDT to create a busbar design in
Q3D Extractor and run a simulation.

.. GENERATED FROM PYTHON SOURCE LINES 8-11

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports.

.. GENERATED FROM PYTHON SOURCE LINES 11-15

.. code-block:: default


    import os
    import pyaedt








.. GENERATED FROM PYTHON SOURCE LINES 16-20

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. 
You can set ``non_graphical`` either to ``True`` or ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: default


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 24-28

Set debugger mode
~~~~~~~~~~~~~~~~~
PyAEDT allows to enable a debug logger which logs all methods called and argument passed.
This example shows how to enable it.

.. GENERATED FROM PYTHON SOURCE LINES 28-34

.. code-block:: default


    pyaedt.settings.enable_debug_logger = True
    pyaedt.settings.enable_debug_methods_argument_logger = True
    pyaedt.settings.enable_debug_internal_methods_logger = False









.. GENERATED FROM PYTHON SOURCE LINES 35-38

Launch AEDT and Q3D Extractor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Launch AEDT 2023 R2 in graphical mode and launch Q3D Extractor. This example uses SI units.

.. GENERATED FROM PYTHON SOURCE LINES 38-44

.. code-block:: default


    q = pyaedt.Q3d(projectname=pyaedt.generate_unique_project_name(),
                   specified_version="2023.2",
                   non_graphical=non_graphical,
                   new_desktop_session=True)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Initializing new desktop!




.. GENERATED FROM PYTHON SOURCE LINES 45-48

Create primitives
~~~~~~~~~~~~~~~~~
Create polylines for three busbars and a box for the substrate.

.. GENERATED FROM PYTHON SOURCE LINES 48-85

.. code-block:: default


    b1 = q.modeler.create_polyline(
        [[0, 0, 0], [-100, 0, 0]],
        name="Bar1",
        matname="copper",
        xsection_type="Rectangle",
        xsection_width="5mm",
        xsection_height="1mm",
    )
    q.modeler["Bar1"].color = (255, 0, 0)

    q.modeler.create_polyline(
        [[0, -15, 0], [-150, -15, 0]],
        name="Bar2",
        matname="aluminum",
        xsection_type="Rectangle",
        xsection_width="5mm",
        xsection_height="1mm",
    )
    q.modeler["Bar2"].color = (0, 255, 0)

    q.modeler.create_polyline(
        [[0, -30, 0], [-175, -30, 0], [-175, -10, 0]],
        name="Bar3",
        matname="copper",
        xsection_type="Rectangle",
        xsection_width="5mm",
        xsection_height="1mm",
    )
    q.modeler["Bar3"].color = (0, 0, 255)

    q.modeler.create_box([50, 30, -0.5], [-250, -100, -3], name="substrate", matname="FR4_epoxy")
    q.modeler["substrate"].color = (128, 128, 128)
    q.modeler["substrate"].transparency = 0.8

    q.plot(show=False, export_path=os.path.join(q.working_directory, "Q3D.jpg"), plot_air_objects=False)




.. image-sg:: /examples/05-Q3D/images/sphx_glr_Q3D_Example_001.png
   :alt: Q3D Example
   :srcset: /examples/05-Q3D/images/sphx_glr_Q3D_Example_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyaedt.generic.plot.ModelPlotter object at 0x000001D9A4263CD0>



.. GENERATED FROM PYTHON SOURCE LINES 86-90

Set up boundaries
~~~~~~~~~~~~~~~~~
Identify nets and assign sources and sinks to all nets.
There is a source and sink for each busbar.

.. GENERATED FROM PYTHON SOURCE LINES 90-102

.. code-block:: default


    q.auto_identify_nets()

    q.source("Bar1", axisdir=q.AxisDir.XPos, name="Source1")
    q.sink("Bar1", axisdir=q.AxisDir.XNeg, name="Sink1")

    q.source("Bar2", axisdir=q.AxisDir.XPos, name="Source2")
    q.sink("Bar2", axisdir=q.AxisDir.XNeg, name="Sink2")
    q.source("Bar3", axisdir=q.AxisDir.XPos, name="Source3")
    bar3_sink = q.sink("Bar3", axisdir=q.AxisDir.YPos)
    bar3_sink.name = "Sink3"








.. GENERATED FROM PYTHON SOURCE LINES 103-106

Print information
~~~~~~~~~~~~~~~~~
Use the different methods available to print net and terminal information.

.. GENERATED FROM PYTHON SOURCE LINES 106-115

.. code-block:: default


    print(q.nets)
    print(q.net_sinks("Bar1"))
    print(q.net_sinks("Bar2"))
    print(q.net_sinks("Bar3"))
    print(q.net_sources("Bar1"))
    print(q.net_sources("Bar2"))
    print(q.net_sources("Bar3"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ['Bar1', 'Bar2', 'Bar3']
    ['Sink1']
    ['Sink2']
    ['Sink3']
    ['Source1']
    ['Source2']
    ['Source3']




.. GENERATED FROM PYTHON SOURCE LINES 116-120

Create setup
~~~~~~~~~~~~
Create a setup for Q3D Extractor and add a sweep that defines the adaptive
frequency value.

.. GENERATED FROM PYTHON SOURCE LINES 120-128

.. code-block:: default


    setup1 = q.create_setup(props={"AdaptiveFreq": "100MHz"})
    sw1 = setup1.add_sweep()
    sw1.props["RangeStart"] = "1MHz"
    sw1.props["RangeEnd"] = "100MHz"
    sw1.props["RangeStep"] = "5MHz"
    sw1.update()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 129-132

Get curves to plot
~~~~~~~~~~~~~~~~~~
Get the curves to plot. The following code simplifies the way to get curves.

.. GENERATED FROM PYTHON SOURCE LINES 132-138

.. code-block:: default


    data_plot_self = q.matrices[0].get_sources_for_plot(get_self_terms=True, get_mutual_terms=False)
    data_plot_mutual = q.get_traces_for_plot(get_self_terms=False, get_mutual_terms=True, category="C")
    data_plot_self
    data_plot_mutual





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ['C(Bar1,Bar2)', 'C(Bar1,Bar3)', 'C(Bar2,Bar1)', 'C(Bar2,Bar3)', 'C(Bar3,Bar1)', 'C(Bar3,Bar2)']



.. GENERATED FROM PYTHON SOURCE LINES 139-142

Create rectangular plot
~~~~~~~~~~~~~~~~~~~~~~~
Create a rectangular plot and a data table.

.. GENERATED FROM PYTHON SOURCE LINES 142-146

.. code-block:: default


    q.post.create_report(expressions=data_plot_self)
    q.post.create_report(expressions=data_plot_mutual, context="Original", plot_type="Data Table")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyaedt.modules.report_templates.Standard object at 0x000001D9A42610F0>



.. GENERATED FROM PYTHON SOURCE LINES 147-150

Solve setup
~~~~~~~~~~~
Solve the setup.

.. GENERATED FROM PYTHON SOURCE LINES 150-154

.. code-block:: default


    q.analyze()
    q.save_project()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 155-158

Get report data
~~~~~~~~~~~~~~~
Get the report data into a data structure that allows you to manipulate it.

.. GENERATED FROM PYTHON SOURCE LINES 158-164

.. code-block:: default


    a = q.post.get_solution_data(expressions=data_plot_self, context="Original")
    a.intrinsics["Freq"]
    a.data_magnitude()
    a.plot()




.. image-sg:: /examples/05-Q3D/images/sphx_glr_Q3D_Example_002.png
   :alt: Simulation Results Plot
   :srcset: /examples/05-Q3D/images/sphx_glr_Q3D_Example_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 2000x1000 with 1 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 165-169

Close AEDT
~~~~~~~~~~
After the simulation completes, you can close AEDT or release it using the
``release_desktop`` method. All methods provide for saving projects before closing.

.. GENERATED FROM PYTHON SOURCE LINES 169-172

.. code-block:: default

    pyaedt.settings.enable_debug_logger = False
    pyaedt.settings.enable_debug_methods_argument_logger = False
    q.release_desktop(close_projects=True, close_desktop=True)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 58.994 seconds)


.. _sphx_glr_download_examples_05-Q3D_Q3D_Example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Q3D_Example.py <Q3D_Example.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Q3D_Example.ipynb <Q3D_Example.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
